[package]
name = "oglens"
version = "0.0.1"
edition = "2021"
authors = ["uzimaru0000 <shuji365630@gmail.com>"]
description = "Tools for viewing OGP"
omepage = "https://github.com/uzimaru0000/oglens"
keywords = [
    "ogp",
    "viewer",
    "tool",
    "cli"
]
readme = "README.md"
license = "MIT"
repository = "https://github.com/uzimaru0000/oglens"
exclude = [
    ".github/*",
    "cliff.toml"
]

[[bin]]
name = "og"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
atty = "0.2.14"
clap = { version = "3.2.22", features = ["derive"] }
cli-table = "0.4.7"
scraper = "0.13.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = { version = "1.0.85", features = ["preserve_order"] }
tokio = { version = "1.21.1", features = ["full"] }
